<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快感锁屏</string>
    <string name="action_settings">Settings</string>
    <string name="tool_bar_first">收益</string>
    <string name="tool_bar_charge">兑换</string>
    <string name="tool_bar_invite">邀请</string>
    <string name="tool_bar_more">更多</string>
    <string name="title_activity_start">快感锁屏</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="http_status_code_error">网络错误</string>
    <string name="http_exception_error">网络异常</string>
    <string name="socket_exception_error">soket异常</string>
    <string name="network_not_connected">网络不可用</string>
    <string name="io_exception_error">io错误</string>
    <string name="app_run_code_error">运行时错误</string>
    <string name="xml_parser_failed">xml解析错误</string>
    <string name="yestoday_income">今日收益</string>
    <string name="purchase_history">历史记录</string>
    <string name="getting">...</string>
    <string name="total_rewards">累计收益</string>
    <string name="mall_center_goods">实物商品</string>
    <string name="mall_center_virtue">虚拟商品</string>
    <string name="mall_center_pay">提现充值</string>
    <string name="invite_every_paid">今日，每邀请一位好友可获得收益</string>
    <string name="invite_total_invite_income">累计邀请收益</string>
    <string name="invite_succ_invite">成功邀请</string>
    <string name="invite_how_to_invite">邀请收益规则：</string>
    <string name="invite_num">您的好友注册后填写您的邀请码可获得2元奖励</string>
    <string name="invite_regist_pay">您邀请好友所得收益，为好友注册当日本页显示的“今日邀请收益”</string>
    <string name="invite_now_succ_invite_pay">现在成功邀请一位好友可获得2元收益</string>
    <string name="invite_inm">立即邀请</string>
    <string name="invite_get_rec_num">一键获取邀请码</string>
    <string name="lock_setting">锁屏设置</string>
    <string name="my_account">我的帐户</string>
    <string name="my_download">我的下载</string>
    <string name="flow_control">流量控制</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="check_update">检查更新</string>
    <string name="tmp_version">none</string>
    <string name="about_unlock_earn">关于惠锁屏</string>
    <string name="turn_on_unlock_surface">开启解锁界面</string>
    <string name="turn_on_message_notification">开启消息通知</string>
    <string name="nickname">昵称</string>
    <string name="manage_delivery_address">管理收货地址</string>
    <string name="telephone_no">手机号</string>
    <string name="recommendation_code">邀请码</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="setting_uesr_state">账户状态</string>
    <string name="modify_password">修改密码</string>
    <string name="quit_login">退出登录</string>
    <string name="turn_on_intel_mode">开启智能模式</string>
    <string name="flow_control_statement">移动数据网络时（2G、3G网络下），自动使用低质量图片并控制图片更新数量</string>
    <string name="creative_intr">创意介绍</string>
    <string name="function_intr">功能介绍</string>
    <string name="contact_kefu">联系客服</string>
    <string name="market_contact">市场合作</string>
    <string name="new_user_welcome">欢迎你，新朋友！</string>
    <string name="new_user_jump">跳过</string>
    <string name="new_user_count_login">已有账号，请登录</string>
</resources>
