<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="@dimen/bottom_tab_height"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <include
            layout="@layout/head"
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_magin_top"
            android:id="@id/cash_head"></include>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/invite_page_title_height"
            android:background="@color/income_sub_item_bg">

            <LinearLayout
                android:id="@id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/invite_page_perday_magin_top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="￥"
                    android:textColor="@color/invite_title_text_color"
                    android:textSize="@dimen/num_two_text_size" />

                <TextView
                    android:id="@id/invite_page_current_invite_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:textColor="@color/invite_title_text_color"
                    android:textSize="@dimen/income_page_title_text_size" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp"
                android:layout_centerHorizontal="true"
                android:text="@string/invite_every_paid"
                android:textColor="@color/tab_text_color_nomal"
                android:textSize="@dimen/num_fif_text_size" />
        </RelativeLayout>

        <LinearLayout
            android:id="@id/invite_details"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/first_page_secondery_height"
            android:background="@color/income_sub_item_bg">

            <RelativeLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@id/invite_total_invite_pay"
                        style="@style/first_page_inner_content"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        style="@style/first_page_inner_title"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/invite_total_invite_income" />
                </LinearLayout>
            </RelativeLayout>

            <View style="@style/first_page_vertical_divider" />

            <RelativeLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@id/invite_succ_person"
                        style="@style/first_page_inner_content"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        style="@style/first_page_inner_title"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/invite_succ_invite" />
                </LinearLayout>

                <ImageView
                    android:id="@id/temp_a"
                    style="@style/first_page_inner_arrow"
                    android:layout_marginRight="13.0dip" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/temp_a"
                    android:src="@drawable/icon_board_info"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <View style="@style/custom_divider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/income_page_magin_left"
            android:layout_marginTop="16.0dip"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_how_to_invite"
                android:textColor="@color/tab_text_color_nomal"
                android:textSize="@dimen/num_sev_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7.0dip"
                android:text="@string/invite_num"
                android:textColor="@color/tab_text_color_nomal"
                android:textSize="@dimen/num_sev_text_size" />

            <TextView
                android:id="@id/invite_string_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7.0dip"
                android:text="@string/invite_regist_pay"
                android:textColor="@color/tab_text_color_nomal"
                android:textSize="@dimen/num_sev_text_size" />

            <TextView
                android:id="@id/invite_string_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_now_succ_invite_pay"
                android:textColor="@color/tab_text_color_nomal"
                android:textSize="@dimen/num_sev_text_size"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@id/invite_immedia"
            style="@style/button_red_long"
            android:text="@string/invite_inm" />

        <Button
            android:id="@id/invite_get_recommend_id"
            style="@style/button_grey_long"
            android:text="@string/invite_get_rec_num" />
    </LinearLayout>
</ScrollView>